--- a/src/main/resources/templates/editProject.html
+++ b/src/main/resources/templates/editProject.html
@@ -34,7 +34,8 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <p><h2>Edit Project Values</h2></p>
+                        <p>
+                        <h2>Edit Project Values</h2></p>
                         <td><input th:placeholder="Name" th:field="*{name}" required/></td>
                         <td><input th:field="*{clientName}" required/></td>
                         <td><input th:placeholder="Country" th:field="*{country}" required/></td>
@@ -53,19 +54,27 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <p><h2>Edit Project Members</h2></p>
+                        <p>
+                        <h2>Edit Project Members</h2></p>
                         <tr th:each="member, itemStat : ${formFoundedProject.memberList}">
                             <td>
-                                <input th:placeholder="Name + ' ' + ${itemStat.count}" th:name="|memberList[${itemStat.index}].name|" th:value="${member.getName()}" required/>
+                                <input th:placeholder="Name + ' ' + ${itemStat.count}"
+                                       th:name="|memberList[${itemStat.index}].name|" th:value="${member.getName()}"
+                                       required/>
                             </td>
                             <td>
-                                <input th:placeholder="Surname + ' ' + ${itemStat.count}" th:name="|memberList[${itemStat.index}].surname|" th:value="${member.getSurname()}" required/>
+                                <input th:placeholder="Surname + ' ' + ${itemStat.count}"
+                                       th:name="|memberList[${itemStat.index}].surname|"
+                                       th:value="${member.getSurname()}" required/>
                             </td>
                             <td>
-                                <input th:placeholder="Role + ' ' + ${itemStat.count}" th:name="|memberList[${itemStat.index}].role|" th:value="${member.getRole()}" required/>
+                                <input th:placeholder="Role + ' ' + ${itemStat.count}"
+                                       th:name="|memberList[${itemStat.index}].role|" th:value="${member.getRole()}"
+                                       required/>
                             </td>
                             <td>
-                                <input hidden th:name="|memberList[${itemStat.index}].id|" th:value="${member.getId()}"/>
+                                <input hidden th:name="|memberList[${itemStat.index}].id|"
+                                       th:value="${member.getId()}"/>
                             </td>
                         </tr>
                         </tbody>
