--- a/src/main/resources/templates/searchProject.html
+++ b/src/main/resources/templates/searchProject.html
@@ -7,18 +7,20 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1> Search Project By Name</h1>
+            <h1> Edit Project By Name</h1>
             <form class="form-inline md-form mr-auto mb-4" th:action="@{/projects/edit}">
-                <input class="form-control mr-sm-2" type="text" th:name="name" required placeholder="Project Name" aria-label="Search">
-                <button class="btn btn-elegant btn-rounded btn-sm my-0"  type="submit">Edit</button>
+                <input class="form-control mr-sm-2" type="text" th:name="name" required placeholder="Project Name"
+                       aria-label="Search">
+                <button class="btn btn-elegant btn-rounded btn-sm my-0" type="submit">Edit</button>
             </form>
         </div>
 
         <div class="col-md-12">
             <h1> Delete Project By Name</h1>
             <form class="form-inline md-form mr-auto mb-4" th:action="@{/projects/delete}">
-                <input class="form-control mr-sm-2" type="text" th:name="name" required placeholder="Project Name" aria-label="Search">
-                <button class="btn btn-elegant btn-rounded btn-sm my-0"  type="submit">Delete</button>
+                <input class="form-control mr-sm-2" type="text" th:name="name" required placeholder="Project Name"
+                       aria-label="Search">
+                <button class="btn btn-elegant btn-rounded btn-sm my-0" type="submit">Delete</button>
             </form>
         </div>
     </div>
