--- a/src/main/resources/templates/editProject.html
+++ b/src/main/resources/templates/editProject.html
@@ -37,7 +37,7 @@
                         <p>
                         <h2>Edit Project Values</h2></p>
                         <td><input th:placeholder="Name" th:field="*{name}" required/></td>
-                        <td><input th:field="*{clientName}" required/></td>
+                        <td><input th:placeholder="ClientName" th:field="*{clientName}" required/></td>
                         <td><input th:placeholder="Country" th:field="*{country}" required/></td>
                         <td><input th:placeholder="Status" th:field="*{status}" required/></td>
                         <td><input type="date" th:field="*{{startDate}}" required/></td>
