--- a/src/main/resources/templates/allProjects.html
+++ b/src/main/resources/templates/allProjects.html
@@ -36,7 +36,7 @@
                th:classappend="${projects.isEmpty()} ? 'disabled' : ''"> Edit Projects </a>
             <a class="btn btn-primary" href="#" th:href="@{/projects/search}"
                th:classappend="${projects.isEmpty()} ? 'disabled' : ''"> DeleteProject </a>
-            <a class="btn btn-info" href="#" th:href="@{/projects/}"> Go to Menu </a>
+            <a class="btn btn-primary" href="#" th:href="@{/projects/}"> Go to Menu </a>
         </div>
     </div>
 </div>
